reverting the whole system to no margin and paddings to fix issue of horizontal overflow

--- a/src/index.css
+++ b/src/index.css
@@ -32,6 +32,16 @@
   --white: #fff;
 }
 
+*{
+    margin: 0;
+    padding: 0;
+    appearance: none;
+    outline: 0;
+    text-decoration: none;
+    list-style: none;
+    box-sizing: border-box;
+}
+
 body {
   margin: 0;
   padding: 0;
